apps/forgejo/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  namespace: forgejo
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      automountServiceAccountToken: false
      priorityClassName: forgejo-service
      nodeSelector:
        kubernetes.io/hostname: kings-canyon
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:16.0.5-rootless@sha256:5effb7305584aca479b29fde6f9631a6dbe86ae798ae02eeea33a3666f0c0bf8
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
            - name: ssh
              containerPort: 2222
              hostPort: 2222
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: '2'
              memory: 2Gi
          startupProbe:
            httpGet:
              path: /api/healthz
              port: http
            periodSeconds: 5
            failureThreshold: 60
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: http
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: http
            periodSeconds: 30
            failureThreshold: 3
            timeoutSeconds: 3
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts: *forgejo-volume-mounts
      terminationGracePeriodSeconds: 120
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: configuration-template
          configMap:
            name: configuration
        - name: generated-configuration
          emptyDir:
            sizeLimit: 1Mi
        - name: bootstrap
          configMap:
            name: bootstrap
            defaultMode: 0555
        - name: runner-registration
          secret:
            secretName: runner-registration
